--- a/webdemo/WebContent/convert.html
+++ b/webdemo/WebContent/convert.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Convert Inches To CM</h1>
-	<form action="convert">
+	<form action="convert" method="post">
 		Inches : <input type="number" name="inches" />
 		<p></p>
 		<input type="submit" value="Convert" />
